--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div id="app">
   <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a href="#" class="navbar-brand">IHM Project</a>
+    <a href="/" class="navbar-brand">IHM Project</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
-      <li class="nav-item">
-        <a href="/home" class="nav-link" routerLink="">Home</a>
-      </li>
       <li class="nav-item" >
         <a href="/users" class="nav-link" routerLink="users">Users</a>
       </li>
