--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -13,7 +13,7 @@
           <tr *ngFor="let product of products">
             <td>{{ product.id }}</td>
             <td>{{ product.name }}</td>
-            <td>{{ product.description }}</td>
+            <td>{{ product.price }}</td>
             <td>{{ product.quantity }}</td>
           </tr>
         </tbody>
