--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -1,29 +1,10 @@
 <div class="card my-5">
     <div class="card-body">
       <form (ngSubmit)="onSubmit()" #userForm="ngForm">
-        <div class="form-group">
-          <label for="name">Name</label>
-          <input type="text" [(ngModel)]="user.name" 
-            class="form-control" 
-            id="name" 
-            name="name" 
-            placeholder="Enter your name"
-            required #name="ngModel">
-        </div>
-        <div [hidden]="!name.pristine" class="alert alert-danger">Name is required</div>
-        <div class="form-group">
-            <label for="lastname">Lastname</label>
-            <input type="text" [(ngModel)]="user.lastname" 
-              class="form-control" 
-              id="lastname" 
-              name="lastname" 
-              placeholder="Enter your lastname"
-              required #lastname="ngModel">
-        </div>
-        <div [hidden]="!lastname.pristine" class="alert alert-danger">Lastname is required</div>
+
         <div class="form-group">
           <label for="mail">Email</label>
-          <input type="text" [(ngModel)]="user.mail" 
+          <input type="text" [(ngModel)]="message.name" 
             class="form-control" 
             id="mail" 
             name="mail" 
@@ -31,8 +12,20 @@
             required #mail="ngModel">
         <div [hidden]="!mail.pristine" class="alert alert-danger">Email is required</div>
         </div>
+        <div class="form-group">
+          <label for="text">Message</label>
+          <input type="text" [(ngModel)]="message.text" 
+            class="form-control" 
+            id="text" 
+            name="text" 
+            placeholder="Enter your message"
+            required #text="ngModel">
+        </div>
+        <div [hidden]="!text.pristine" class="alert alert-danger">A message is required</div>
+        <div class="form-group">
         <button type="submit" [disabled]="!userForm.form.valid" 
           class="btn btn-info">Submit</button>
+        </div>
       </form>
     </div>
   </div>
