--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,22 +1,31 @@
 <div class="card my-5">
     <div class="card-body">
-      <table class="table table-bordered table-striped">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Lastname</th>
-            <th scope="col">Email</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let user of users">
-            <td>{{ user.id }}</td>
-            <td>{{ user.name }}</td>
-            <td>{{ user.lastname }}</td>
-            <td><a href="mailto:{{ user.mail }}">{{ user.mail }}</a></td>
-          </tr>
-        </tbody>
-      </table>
+      <h4>Users List</h4>
+      <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let user of users; let i = index"
+          [class.active]="i == currentIndex"
+          (click)="setActiveUser(user, i)"
+        >
+          {{ user.name }}
+        </li>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <div *ngIf="currentUser.id">
+        <h4>User</h4>
+        <div>
+          <label><strong>Name:</strong></label> 
+          {{ currentUser.name }}
+        </div>
+        <div>
+          <label><strong>Lastname:</strong></label>
+          {{ currentUser.lastname }}
+        </div>
+        <div>
+          <label><strong>Mail:</strong></label>
+            {{ currentUser.mail}}
+        </div>
     </div>
   </div>
